--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mysql2": "^3.10.3"
+    "mysql2": "^3.10.3",
+    "nodemon": "^3.1.7"
   },
   "name": "historic-milestones-application",
   "version": "1.0.0",
