--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "kafkajs": "^2.2.4",
     "mysql2": "^3.10.3",
     "nodemon": "^3.1.7"
   },
